Added <picture> & <figure> tags

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ html{
 }
 body {
   min-width: 300px;
-  max-width: 500px;
+  max-width: 600px;
   margin: 0 auto;
   background-color: white;
 }
@@ -12,5 +12,5 @@ body {
   flex-wrap: wrap;
 }
 .blog__entry--image{
-  width: 100%;
+  max-width: 100%;
 }
